fix image flicker

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,4 +17,6 @@ img.card {
   border-top-right-radius: 4.75% 3.5%;
   border-bottom-right-radius: 4.75% 3.5%;
   border-bottom-left-radius: 4.75% 3.5%;
+  width: 488px;
+  height: 680px;
 }
